feat: basic implementations working on generation next, will likely use templ for it (note the templ files).
