# internal/api_structures.go
@@ -1,8 +1,13 @@
 package api_structures
 
+import (
+	"time"
+)
+
 type GenericResponse struct {
 	Success bool   `json:"success"`
 	Message string `json:"message"`
+	Data    any    `json:"data,omitempty"`
 }
 
 type ActivityRole struct {
@@ -10,7 +15,7 @@ type ActivityRole struct {
 	RequiredPoints int    `json:"required_points"`
 }
 
-type Activity struct {
+type ActivityConfig struct {
 	IsEnabled       bool           `json:"is_enabled"`
 	GrantAmount     int            `json:"grant_amount"`
 	CooldownSeconds int            `json:"cooldown_seconds"`
@@ -18,5 +23,49 @@ type Activity struct {
 }
 
 type GuildSettings struct {
-	ChatActivity Activity `json:"chat_activity"`
+	ChatActivity ActivityConfig `json:"chat_activity"`
+}
+
+// ---------------------------------------------------------------------
+
+type CardStyle int
+
+const (
+	CardStyleDefault CardStyle = iota
+)
+
+type ActivityType string
+
+const (
+	ActivityTypeChat ActivityType = "chat"
+	// ActivityTypeVoice ActivityType = "voice"
+)
+
+func (a ActivityType) Valid() bool {
+	return a == ActivityTypeChat
+}
+
+type ActivityRoleProgress struct {
+	RoleID          string `json:"role_id"`
+	Progress        int    `json:"progress"`
+	RemainingPoints int    `json:"remaining_points"`
+	RequiredPoints  int    `json:"required_points"`
+}
+
+type MemberRoles struct {
+	Next     ActivityRoleProgress `json:"next"`
+	Obtained []ActivityRole       `json:"obtained"`
+}
+
+type MemberActivity struct {
+	Rank         int         `json:"rank"`
+	Points       int         `json:"points"`
+	IsOnCooldown bool        `json:"is_on_cooldown"`
+	LastGrant    time.Time   `json:"last_grant"`
+	Roles        MemberRoles `json:"roles"`
+}
+
+type MemberProfile struct {
+	CardStyle    CardStyle      `json:"card_style"`
+	ChatActivity MemberActivity `json:"chat_activity"`
 }
